# ICM42688_Barsotion

./: .gitignore  LICENSE  README.md  methods_descriptions.md
examples/: recursive_calibration.c  simple.c  spectre.c
main/: CMakeLists.txt  ICM42688_Barsotion.c  ICM42688_Barsotion.h  ICM42688_I2C.c  ICM42688_Interface.c  ICM42688_Interface.h  ICM42688_RegMap.h  ICM42688_SPI.c  main.c  microFFT.c  microFFT.h  pin_defs.h
src/: ICM42688_Barsotion.c  ICM42688_Barsotion.h  ICM42688_Filter.c  ICM42688_RegMap.h  ICM42688_SPI.c  microFFT.c
